@@ -37,6 +37,14 @@
 
 2008-04-08  Tambet Ingo  <tambet@gmail.com>
 
+	* src/connection-editor/page-wireless.c: Implement updating and verifying
+	the wireless setting.
+
+	* src/connection-editor/page-wireless-security.c (update_connection): 
+	Update the connection from UI.
+
+2008-04-08  Tambet Ingo  <tambet@gmail.com>
+
 	* src/applet-device-cdma.c (add_disconnect_item): 
 	* src/applet-device-gsm.c (add_disconnect_item): Update to check the new
 	device states.
